# geometric-governance

./: .gitignore  README.md  pyproject.toml
crypto_l65/: data.py  utils.py
data/: README.md
experiments/learn_voting_rules/: dataset.py  gen_plots.ipynb  gen_table.py  main.py  pyproject.toml  real_world_eval.py  sweep.sh
experiments/learn_voting_rules/conf/: config.yaml  mono.yaml  schema.py
experiments/learn_voting_rules/sweeps/: mono_stv.sh  set_graph_alt.sh
experiments/maximise_welfare/: dataset.py  eval_classical_mechanism.py  extract_best_welfare_checkpoints.py  main.py  pyproject.toml  sweep.sh
experiments/maximise_welfare/conf/: base.yaml  config.yaml  schema.py
experiments/maximise_welfare/sweeps/: dirichlet_and_spatial.sh  movielens.sh  ranking.sh
experiments/strategic_voting/: .gitignore  dataset.py  extract_best_robust_checkpoints.py  gen_plots.ipynb  gen_plots.py  main.py  pyproject.toml  sweep1.sh  sweep2.sh
experiments/strategic_voting/conf/: config.yaml  movielens.yaml  schema.py  synthetic.yaml  synthetic_rank.yaml
experiments/strategic_voting/pretrained_models/: README.md
experiments/strategic_voting/sweeps/: sweep_movielens_initial.sh  sweep_movielens_initial_private.sh  sweep_movielens_initial_public.sh  sweep_movielens_initial_results.sh  sweep_movielens_robust _public.sh  sweep_movielens_robust.sh  sweep_movielens_robust_private.sh  sweep_movielens_robust_results.sh  sweep_synthetic_initial.sh  sweep_synthetic_initial_private.sh  sweep_synthetic_initial_private_ranking.sh  sweep_synthetic_initial_public.sh  sweep_synthetic_initial_results.sh  sweep_synthetic_robust.sh  sweep_synthetic_robust_private.sh  sweep_synthetic_robust_results.sh
geometric_governance/: data.py  gen_plots.py  model.py  util.py  utils.py
notebooks/: bipartite_gats.ipynb  bipartite_mpnn.ipynb  deepset_identity_test.ipynb  election_model  full_method.ipynb  learn_voting_rules.ipynb  learn_voting_rules_mark.ipynb  learn_voting_rules_yash.ipynb  learn_voting_welfare.ipynb  learn_welfare_fn.ipynb  maximise_welfare.ipynb  monotonicity.ipynb  plurality_deepsets.ipynb  real_world_data.ipynb  robust_voting.ipynb  strategy_model.ipynb  top_two.ipynb  voter_collusion.ipynb
src/geometric_governance/: .secret.yaml  data.py  extract_best_welfare_checkpoints.py  gen_appendix_welfare_plots.py  gen_plots.py  gen_welfare_loss_plots.py  gen_welfare_plots.py  gen_welfare_test_metrics.py  model.py  objective.py  train.py
src/geometric_governance/data/: __init__.py  election_data.py  sources.py
src/geometric_governance/model/: __init__.py  gesn.py  gevn.py  nn.py  sinkhorn.py
src/geometric_governance/util/: __init__.py  logging.py  misc.py
