[project]
name = "geometric-governance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MarkHaoxiang", email = "mark.haoxiang@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    # hatchling and editables are required for --no-build isolation install of torch-scatter
    "editables>=0.5",
    "hatchling>=1.27.0",
    "ipykernel>=6.29.5",
    "numpy>=2.2.3",
    "preflibtools>=2.0.32",
    "torch == 2.5.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
    "wandb>=0.19.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]

[tool.hatch.metadata]
allow-direct-references = true
