[project]
name = "geometric-governance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MarkHaoxiang", email = "mark.haoxiang@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "editables>=0.5",
    "hatchling>=1.27.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "preflibtools>=2.0.32",
    "pydantic>=2.10.6",
    "torch == 2.5.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
    "wandb>=0.19.8",
    "pandas>=2.2.3",
    "jupyterlab >= 4.3.6",
    # Manually install torch_scatter
    # uv pip install torch-scatter -f https://data.pyg.org/whl/torch-2.5.0+cu124.html
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.workspace]
members = [".", "experiments/*"]

[tool.uv.sources]
geometric_governance = { workspace = true }
